<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enterusernamelayout" android:background="@drawable/bg_gradient" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="219dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:contentDescription="@string/person_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.158"
            app:srcCompat="@drawable/baseline_account_circle_24" />

        <EditText
            android:id="@+id/usernameconfirm"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/confirm_new_username"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColorHint="#b3aeae"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/submitbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newusername" />

        <EditText
            android:id="@+id/newusername"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/enter_new_username"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColorHint="#b3aeae"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/usernameconfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/submitbutton"
            android:layout_width="170dp"
            android:layout_height="65dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="121dp"
            android:layout_marginBottom="95dp"
            android:backgroundTint="#314977"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="22sp"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameconfirm" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
