<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        app:srcCompat="@drawable/icon_foreground_login"  />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/voteridContainer"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginBottom="20dp"
        android:hint="@string/voter_s_id"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="#b3aeae"
        android:textSize="20sp"
        app:startIconDrawable="@drawable/baseline_remember_me_24"
        app:layout_constraintBottom_toTopOf="@+id/usernameContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/voterid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameContainer"
        android:layout_width="300sp"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColorHint="#b3aeae"
        android:textSize="20sp"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:layout_constraintBottom_toTopOf="@+id/passwordContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voteridContainer" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:ems="10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="300sp"
        app:errorEnabled="true"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:textColorHint="#b3aeae"
        android:textSize="20sp"
        app:startIconDrawable="@drawable/baseline_key_24"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/loginbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameContainer" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#314977"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/registerhere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />

    <TextView
        android:id="@+id/registerhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="58dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register_here"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
        android:id="@+id/loginprogress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/usernameContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voteridContainer"
        app:loader_circleRadius="6dp"
        app:loader_defaultColor="@color/darknavyblue"
        app:loader_expandOnSelect="false"
        app:loader_firstShadowColor="@color/blue_selected"
        app:loader_isSingleDir="false"
        app:loader_noOfDots="5"
        app:loader_secondShadowColor="@color/blue_default"
        app:loader_selectedColor="@color/navyblue"
        app:loader_selectedRadius="10dp"
        app:loader_showRunningShadow="true" />
</androidx.constraintlayout.widget.ConstraintLayout>
