<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg_gradient">

    <ImageButton
        android:id="@+id/pickimgbtn"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nameContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_24" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameContainer"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="20dp"
        app:startIconDrawable="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="#b3aeae"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickimgbtn" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameContainer"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="0dp"
        android:drawableStart="@drawable/baseline_person_24"
        app:startIconDrawable="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColorHint="#b3aeae"
        android:textSize="20sp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/passwordContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameContainer" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="0dp"
        app:startIconDrawable="@drawable/baseline_key_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#b3aeae"
        android:textSize="20sp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/registerbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameContainer" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="39dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#314977"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/loginhere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />

    <TextView
        android:id="@+id/loginhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="37dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login_here"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
