<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enterpasswordlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="219dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/baseline_key_24"
            app:layout_constraintBottom_toTopOf="@+id/newpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#f1f1f1" />

        <EditText
            android:id="@+id/confirmnewpassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"

            android:textColorHint="#b3aeae"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/submitbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newpassword" />

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/enter_new_password"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColorHint="#b3aeae"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/confirmnewpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/submitbutton"
            android:layout_width="170dp"
            android:layout_height="65dp"
            android:layout_marginTop="83dp"
            android:layout_marginBottom="106dp"
            android:backgroundTint="#314977"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="22sp"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmnewpassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
