<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="219dp"
            android:src="@drawable/baseline_key_24"
            app:layout_constraintBottom_toTopOf="@+id/usernameContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#f1f1f1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameContainer"
            android:layout_width="300sp"
            android:layout_height="60dp"
            android:layout_marginTop="119dp"
            android:layout_marginBottom="20dp"
            app:startIconDrawable="@drawable/baseline_person_24"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColorHint="#b3aeae"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/passwordContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="300sp"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            android:textColorHint="#b3aeae"
            android:textSize="20sp"
            app:startIconDrawable="@drawable/baseline_key_24"
            app:passwordToggleEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/submitbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameContainer" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submitbutton"
            android:layout_width="170dp"
            android:layout_height="65dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="110dp"
            android:backgroundTint="#314977"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="22sp"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
